[gd_scene load_steps=5 format=3 uid="uid://dwg5gvl6rrjeg"]

[ext_resource type="Script" uid="uid://dma16kredqnfv" path="res://Scripts/floating_ui.gd" id="1_8nwrk"]
[ext_resource type="Script" uid="uid://dj66xipgdygm3" path="res://Scripts/Buttons/back_script.gd" id="3_binoc"]
[ext_resource type="Texture2D" uid="uid://cexyw4bucmdps" path="res://Assets/Icons/back.svg" id="4_usqw1"]
[ext_resource type="Texture2D" uid="uid://m2w4htec7827" path="res://Assets/Sprites/Glyphs/XBOX/GamepadB.tres" id="4_uvm42"]

[node name="BackButton" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_8nwrk")
vertical_intensity = 7.0
horizontal_intensity = 12

[node name="Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = -26.0
offset_right = 151.0
offset_bottom = 70.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_usqw1")
script = ExtResource("3_binoc")

[node name="GamepadIcon" type="TextureRect" parent="Button"]
layout_mode = 0
offset_left = 89.0
offset_top = 29.0
offset_right = 114.0
offset_bottom = 56.0
texture = ExtResource("4_uvm42")

[connection signal="focus_entered" from="Button" to="Button" method="_on_mouse_entered"]
[connection signal="focus_entered" from="Button" to="Button" method="_on_focus_entered"]
[connection signal="focus_exited" from="Button" to="Button" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Button" to="Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="Button" method="_on_mouse_exited"]
[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
